fixed express making flag alignment

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -403,11 +403,6 @@ $product-cheetah-image-url: image-url("product-color-images/Cheetah.png");
 
 
 	}
-	.col-md-4 {
-	  .express-delivery {
-		top:20px;
-	  }
-	}
 
 	.left-path{
 		padding-left: 0;
